# rust_bazel_hello_world

./: .gitignore  BUILD.bazel  Cargo.toml  README.md  WORKSPACE.bazel
assets/: hello_world.txt
src/: main.rs
utilities/: BUILD.bazel
utilities/src/: lib.rs
