[package]
name = "hello_world"
version = "0.0.1"
edition = "2018"

[dependencies]
log = {version = "0.4.11", features = ["std"]}
env_logger = "0.8.1"

[[bin]]
name = "hello_world"
path = "src/main.rs"

[raze]
workspace_path = "//cargo"
target = "x86_64-apple-darwin"
output_buildfile_suffix = "BUILD.bazel"
gen_workspace_prefix = "hello_cargo_library"
genmode = "Remote"
default_gen_buildrs = true
